tests/compile-fail/Rule_13_4.rs
fn main() {
    let a: u8;

    if a = 1 {
        //~^ ERROR mismatched types
    }
}
